corpus/cpp/constexpr/case-01/snapshots/gcc13_14/native_text_capture/render.ci.txt
note: some compiler details were not fully structured; original diagnostics are preserved
src/main.cpp:1:27: error: [constexpr] compile-time evaluation failure
help: ensure all expressions and function calls in the constexpr context are constant-evaluable
raw : src/main.cpp:1:27: error: static assertion failed: int size mismatch
| src/main.cpp:1:27
| static_assert(sizeof(int) == 1, "int size mismatch");
|                           ^
note: src/main.cpp:1:27: note: the comparison reduces to ‘(4 == 1)’
raw:
  src/main.cpp:1:27: error: static assertion failed: int size mismatch
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output